test/files/neg/t3614.check
t3614.scala:2: error: only declarations allowed here
  def v = new ({ def a=0 })
                     ^
one error found
